<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/buttonNotes"
        android:layout_width="323dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/notes_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCuisson" />

    <Button
        android:id="@+id/buttonMissions"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/missions_menu"
        app:layout_constraintStart_toEndOf="@+id/buttonCuisson"
        app:layout_constraintTop_toBottomOf="@+id/buttonMobs" />

    <Button
        android:id="@+id/buttonCraft"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/craft_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonItems"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/items_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCraft" />

    <Button
        android:id="@+id/buttonCuisson"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/cuisson_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonItems" />

    <Button
        android:id="@+id/buttonMobs"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/mobs_menu"
        app:layout_constraintStart_toEndOf="@+id/buttonItems"
        app:layout_constraintTop_toBottomOf="@+id/buttonBiomes" />

    <Button
        android:id="@+id/buttonBiomes"
        android:layout_width="139dp"
        android:layout_height="126dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="108dp"
        android:drawableTop="@android:drawable/ic_menu_search"
        android:text="@string/biomes_menu"
        app:layout_constraintStart_toEndOf="@+id/buttonCraft"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>